fix: fixed overflow bug

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,7 +1,7 @@
 @import url("https://fonts.googleapis.com/css2?family=Anton&family=Arvo&family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
 
-/* taken and expanded upon from css tricks - link in README */
-body {
+/* body,html section taken and expanded upon from css tricks - link in README */
+body, html {
   width: 100%;
   margin: 0px;
   padding: 0px;
@@ -96,6 +96,8 @@ body {
 
 .cta-section {
     background: rgba(0, 0, 0, 0.7);
+    margin-left: 0px;
+    margin-right: 0px;
 }
 
 /******************* JUMBOTRON-HOMEPAGE END*/
